--- a/src/app/onion/learning-object-builder/components/outcome/outcome.component.scss
+++ b/src/app/onion/learning-object-builder/components/outcome/outcome.component.scss
@@ -1,5 +1,8 @@
 @import '~_vars.scss';
 
+$dark-text: #545e64;
+$light-blue-gradient: linear-gradient(45deg, darken($bright-blue, 10), lighten($bright-blue, 5));
+
 .outcome-component {
   padding: 30px 25px;
   box-sizing: border-box;
@@ -88,7 +91,7 @@
       box-shadow: 0 2px 12px 2px rgba(0, 0, 0, 0.04);
       text-align: center;
       font-weight: 500;
-      font-size: 16px;
+      font-size: 15px;
       color: darken($placeholder, 10);
       transition: all 0.2s ease;
       cursor: pointer;
